fix: made the scrollbar dark

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,7 @@
 .Toastify__close-button {
     @apply text-white;
 }
+
+:root {
+    color-scheme: dark;
+}
